[project]
name = "line-scanner-simulator"
version = "0.1.0"
description = "Simulates the effects of a line scanner to images/document processing by providing a point spread function/optical transfer function and applying it line by line to an image"
authors = [
    {name = "Jacob Felding", email = "jfelding@gmail.com"},
]
dependencies = []
requires-python = ">=3.11"
readme = "README.md"
license = {text = "0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
